<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="@dimen/margin_medium">

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_reportar"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_title"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@id/imgHeader"
        app:layout_constraintTop_toTopOf="@id/imgHeader"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/imgHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombreJuego"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:background="@drawable/input_background"
                android:hint="@string/hint_nombre_juego"
                android:padding="@dimen/padding_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_plataforma"
                android:textColor="@color/text_primary"
                android:layout_marginTop="@dimen/margin_small"/>

            <Spinner
                android:id="@+id/spPlataforma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/plataformas"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tipo_bug"
                android:textColor="@color/text_primary"
                android:layout_marginTop="@dimen/margin_small"/>

            <Spinner
                android:id="@+id/spTipoBug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipos_bug"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gravedad"
                android:textColor="@color/text_primary"
                android:layout_marginTop="@dimen/margin_small"/>

            <RadioGroup
                android:id="@+id/rgGravedad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbBaja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gravedad_baja"/>

                <RadioButton
                    android:id="@+id/rbMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gravedad_media"/>

                <RadioButton
                    android:id="@+id/rbAlta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gravedad_alta"/>
            </RadioGroup>

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height_large"
                android:background="@drawable/input_background"
                android:hint="@string/hint_descripcion"
                android:gravity="top|start"
                android:padding="@dimen/padding_small"/>

            <!-- Botones en LinearLayout (horizontal) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_medium">

                <Button
                    android:id="@+id/btnReportar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:text="@string/btn_reportar"/>

                <Space
                    android:layout_width="@dimen/margin_small"
                    android:layout_height="match_parent"/>


                <Button
                    android:id="@+id/btnVerLista"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:text="@string/btn_ver_lista"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
